--- a/style.css
+++ b/style.css
@@ -53,8 +53,16 @@
   height: 345px;
 }
 
-a.button-fill.calc-igual{
+.picker-modal-inner > div:nth-child(1) {
+	//font-weight: bold;
+}
 
+p.buttons-row> a{
+	font-size: 25px
+}
+
+p.buttons-row:nth-child(1) > a:nth-child(3) > img:nth-child(1){
+	width: 25px;
 }
 
 /**
